fix for overflowing tabs

--- a/themes/grav/css-compiled/template.css
+++ b/themes/grav/css-compiled/template.css
@@ -1290,7 +1290,9 @@ body.remodal_active .remodal {
 .tab-body {
   position: absolute;
   top: -9999px;
-  opacity: 0; }
+  opacity: 0;
+  width: 100%;
+  overflow: hidden; }
 
 .tab-body-wrapper {
   padding-top: 3.5em;
